force-app/main/default/objects/Account_Profile__c/Account_Profile__c.object-meta.xml
<CustomObject>
    <label>Account Review</label>
    <nameField>
        <label>Account Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>