force-app/main/default/objects/Account_Profile__c/fields/Assists_to_ASTA__c.field-meta.xml
<CustomField>
    <fullName>Assists_to_ASTA__c</fullName>
    <label>Assists to ASTA?</label>
    <length>80</length>
    <type>Text</type>
</CustomField>