force-app/main/default/objects/Account_Profile__c/fields/Comment_on_client__c.field-meta.xml
<CustomField>
    <fullName>Comment_on_client__c</fullName>
    <label>Comment on client</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>