force-app/main/default/objects/Account_Profile__c/fields/Contact_persons__c.field-meta.xml
<CustomField>
    <fullName>Contact_persons__c</fullName>
    <label>Contact persons</label>
    <length>80</length>
    <type>Text</type>
</CustomField>