force-app/main/default/objects/Account_Profile__c/fields/Estimate_sales_volume__c.field-meta.xml
<CustomField>
    <fullName>Estimate_sales_volume__c</fullName>
    <label>Estimate sales volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>