force-app/main/default/objects/Account_Profile__c/fields/Estimate_Volume_obs__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Volume_obs__c</fullName>
    <label>Estimate Volume obs</label>
    <length>40</length>
    <type>Text</type>
</CustomField>