force-app/main/default/objects/Account_Profile__c/fields/Is_buying_parent_seed__c.field-meta.xml
<CustomField>
    <fullName>Is_buying_parent_seed__c</fullName>
    <label>Is buying parent seed?</label>
    <length>40</length>
    <type>Text</type>
</CustomField>