force-app/main/default/objects/Account_Profile__c/fields/Is_testing__c.field-meta.xml
<CustomField>
    <fullName>Is_testing__c</fullName>
    <label>Is testing?</label>
    <length>40</length>
    <type>Text</type>
</CustomField>