force-app/main/default/objects/Account_Profile__c/fields/Lineup_description__c.field-meta.xml
<CustomField>
    <fullName>Lineup_description__c</fullName>
    <label>Lineup description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>