force-app/main/default/objects/Account_Profile__c/fields/Met__c.field-meta.xml
<CustomField>
    <fullName>Met__c</fullName>
    <label>Met?</label>
    <length>40</length>
    <type>Text</type>
</CustomField>