force-app/main/default/objects/Account_Profile__c/fields/RM_range__c.field-meta.xml
<CustomField>
    <fullName>RM_range__c</fullName>
    <label>RM range</label>
    <length>40</length>
    <type>Text</type>
</CustomField>