force-app/main/default/objects/Account_Profile__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State footprint</label>
    <length>40</length>
    <type>Text</type>
</CustomField>