force-app/main/default/objects/Account_Profile__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Assists_to_ASTA__c</columns>
    <columns>Contact_persons__c</columns>
    <columns>Estimate_sales_volume__c</columns>
    <columns>Is_buying_parent_seed__c</columns>
    <columns>Is_testing__c</columns>
    <columns>Met__c</columns>
    <columns>Season__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>